--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,14 @@ body{
     width: 10px;
   }
 }
+.kk{
+  /* background-color: #0F6A85; */
 
+}
+.kk:hover{
+  color: #0F6A85;
+
+}
 #btn1{
     background-color: #4CAF50;
     color: white;
@@ -42,6 +49,7 @@ body{
 #btn2:hover{
   background-color: red;
   box-shadow: 0 0 10px 0 rgb(125, 125, 125);
+  transform: scale(0.95);
 }
 .sidebtn{
   background-color: red;
@@ -55,11 +63,24 @@ body{
 .sidebtn:hover{
   background-color: #f44336;
   box-shadow: 0 0 10px 0;
+
+  transform: scale(0.95);
+}
+#goot{
+  background-color: #f44336;
+
+}
+#goot:hover{
+  transform: scale(0.95);
+  background-color: #f44336;
+  box-shadow: 0 0 10px 0;
+
 }
 
 #subbt{
   transition: 0.3s;
   cursor: pointer;
+  background-color: #2C6778;
 }
 
 #subbt:hover   {
