--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,40 @@ body{
   color: #0F6A85;
 
 }
+#tushal{
+  /* font-family: "Josefin Sans", serif; */
+  /* font-family: "Signika Negative", serif;
+  font-optical-sizing: auto;
+  font-weight: weight;
+  font-style: normal; */
+
+  /* font-family: "Signika Negative", serif; */
+  /* font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; */
+  font-family: "Lobster", serif;
+  font-weight: 100;
+
+  /* font-family: "Open Sans", serif;
+  font-optical-sizing: auto; */
+  /* font-weight: <weight>; */
+  /* font-style: normal;
+  font-variation-settings:
+    "wdth" 100; */
+
+  /* font-family: "Open Sans", serif; */
+/* .open-sans-<uniquifier> {
+  font-family: "Open Sans", serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100; */
+}
+#searchTitle{
+  outline: none;
+}
+#soso{
+  outline: none;
+}
 #btn1{
     background-color: #4CAF50;
     color: white;
